<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTb"
    tools:context=".CalculadoraFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:focusable="false"
        android:textAlignment="viewEnd"
        android:textColor="@color/colorBtnTextNumbers"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/gridL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="234,05" />


    <GridLayout
        android:id="@+id/gridL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alignmentMode="alignMargins"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult">
        <!--Fila 1-->
        <Button
            android:id="@+id/btn7"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtnNumbers"
            android:padding="20dp"
            android:text="@string/btn7Calc"
            android:textColor="@color/colorBtnTextNumbers"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn8"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtnNumbers"
            android:padding="20dp"
            android:text="@string/btn8Calc"
            android:textColor="@color/colorBtnTextNumbers"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn9"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtnNumbers"
            android:padding="20dp"
            android:text="@string/btn9Calc"
            android:textColor="@color/colorBtnTextNumbers"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMas"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtnPrimary"
            android:padding="20dp"
            android:text="@string/btnMasCalc"
            android:textColor="@color/coloBtnOper"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!--Fila 2-->
        <Button
            android:id="@+id/btn4"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtnNumbers"
            android:padding="20dp"
            android:text="@string/btn4Calc"
            android:textColor="@color/colorBtnTextNumbers"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn5"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtnNumbers"
            android:padding="20dp"
            android:text="@string/btn5Calc"
            android:textColor="@color/colorBtnTextNumbers"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn6"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtnNumbers"
            android:padding="20dp"
            android:text="@string/btn6Calc"
            android:textColor="@color/colorBtnTextNumbers"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMenos"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtnPrimary"
            android:padding="20dp"
            android:text="@string/btnMenosCalc"
            android:textColor="@color/coloBtnOper"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!--Fila 3-->
        <Button
            android:id="@+id/btn1"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtnNumbers"
            android:padding="20dp"
            android:text="@string/btn1Calc"
            android:textColor="@color/colorBtnTextNumbers"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn2"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtnNumbers"
            android:padding="20dp"
            android:text="@string/btn2Calc"
            android:textColor="@color/colorBtnTextNumbers"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn3"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtnNumbers"
            android:padding="20dp"
            android:text="@string/btn3Calc"
            android:textColor="@color/colorBtnTextNumbers"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPor"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtnPrimary"
            android:padding="20dp"
            android:text="@string/btnPorCalc"
            android:textColor="@color/coloBtnOper"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!--Fila 4-->
        <Button
            android:id="@+id/btnMasMenos"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtnPrimary"
            android:padding="20dp"
            android:text="@string/btnMasMenosCalc"
            android:textColor="@color/coloBtnOper"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn0"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtnNumbers"
            android:padding="20dp"
            android:text="@string/btn0Calc"
            android:textColor="@color/colorBtnTextNumbers"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnComa"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtnPrimary"
            android:padding="20dp"
            android:text="@string/btnPuntoCalc"
            android:textColor="@color/coloBtnOper"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEntre"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtnPrimary"
            android:padding="20dp"
            android:text="@string/btnEntreCalc"
            android:textColor="@color/coloBtnOper"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!--Fila 5-->
        <Button
            android:id="@+id/btnClear"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorClear"
            android:padding="20dp"
            android:text="@string/btnClearCalc"
            android:textColor="@color/coloBtnOper"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnIgual"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBtnPrimary"
            android:padding="20dp"
            android:text="@string/btnIgualCalc"
            android:textColor="@color/coloBtnOper"
            android:textSize="25sp"
            android:textStyle="bold" />



    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>